--- a/tasks/install-mailcow.yml
+++ b/tasks/install-mailcow.yml
@@ -49,11 +49,18 @@
 
 # TODO: Fix ansible error on Debian Buster
 - name: Pull docker images & start containers (this takes a while).
-  docker_compose:
+  docker_service:
     project_src: "{{ mc_install_dir }}"
     pull: yes
     state: present # equivalent to docker-compose up
   when: ansible_distribution == "Debian" and ansible_distribution_release == "stretch"
+
+- name: Pull docker images & start containers (this takes a while).
+  docker_service:
+    project_src: "{{ mc_install_dir }}"
+    pull: yes
+    state: present # equivalent to docker-compose up
+  when: ansible_distribution == "Ubuntu" and ansible_distribution_release == "bionic"
 
 - name: Pull docker images (this takes a while).
   shell: docker-compose pull
